# daedalus

./: .gitignore  Cargo.toml  devenv.nix  devenv.yaml  flake.nix
assets/: health_bar.aseprite  ogre.aseprite  player.aseprite  potion-effect.aseprite
assets/stages/: maze.ldtk
src/: animation.rs  assets.rs  audio.rs  camera.rs  collectible.rs  debug.rs  default.rs  dev_tools.rs  health.rs  hud.rs  input.rs  inventory.rs  lib.rs  main.rs  patrol.rs  pause.rs  physics.rs  player.rs  prelude.rs  wall.rs
src/entity/: mod.rs  player.rs  potion.rs
src/field/: health.rs  mod.rs
src/gameplay/: hud.rs  mod.rs
src/gameplay/actors/: mod.rs  ogre.rs  player.rs  potion.rs  wall.rs
src/gameplay/behavior/: health.rs  inventory.rs  mod.rs  patrol.rs
src/ldtk/: fields.rs  level.rs  mod.rs  ogre.rs  player.rs  potion.rs  wall.rs
src/menus/: mod.rs  pause.rs  settings.rs
src/screens/: gameplay.rs  loading.rs  mod.rs
src/theme/: mod.rs  widgets.rs
