[package]
name = "daedalus"
version = "0.1.0"
edition = "2024"

[dependencies]
avian2d = "0.3.0"
bevy = { version = "0.16.0", features = ["wayland"] }
bevy-inspector-egui = "0.31.0"
bevy_ecs_ldtk = { version = "0.12.0", features = ["atlas"] }
bevy_egui = "0.34.1"

[features]
default = ["dev_native"]
dev = [
  "bevy/dynamic_linking",
  "bevy/bevy_dev_tools",
  "bevy/bevy_ui_debug",
  "bevy/track_location",
]
dev_native = [
  "dev",
  "bevy/file_watcher",
  "bevy/embedded_watcher",
]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
